--- a/public/stylesheets/components/buttons/Button.module.css
+++ b/public/stylesheets/components/buttons/Button.module.css
@@ -232,6 +232,9 @@
     border: var(--border);
     border-radius: calc(32px / 2);
 }
+.moreOrLessAlternative > span {
+    color: var(--text-inactive-color);
+}
 /* ----------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* Button ( Navigation Button ) */
 /* ----------------------------------------------------------------------------------------------------------------------------------------------------- */
